Fix some broken styles for Saltwater Farm Vineyard.

--- a/src/main/webapp/sass-hidden/tab.sass
+++ b/src/main/webapp/sass-hidden/tab.sass
@@ -280,6 +280,7 @@
       font-size: 11px
       height: 1.1em
       line-height: normal
+      display: inline-block
 
       background-color: white
       color: black
@@ -317,6 +318,8 @@
 
       text-transform: none
       letter-spacing: normal
+
+      vertical-align: baseline
 
     &.visible
       bottom: 0
